--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
+HOST=127.0.0.1
 PORT=5000
 ENABLE_CORS=true
+JWTSECRET=huOte.hu>$h23tudeLot89$@$%4_",32
+MONGODB=mongodb://localhost:27001/wlmoniter
+MAIL_HOST=smtp.263xmail.com
+MAIL_PORT=465
+MAIL_USER=quant@kotei-info.com
+MAIL_PASS=kotei$tq88
+MAIL_FROM=WLAdmin <wladmin@kotei-info.com>
+MAIL_SUBJECT=Password Reset
