--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jwt-simple": "^0.4.0",
+    "moment": "^2.10.6",
     "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
     "nodemailer": "^0.7.1",
+    "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
