answer user apply

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ MAIL_USER=quant@kotei-info.com
 MAIL_PASS=kotei$tq88
 MAIL_FROM=WLAdmin <wladmin@kotei-info.com>
 MAIL_SUBJECT=Password Reset
-MAIL_AUTOALLOW=true
+MAIL_AUTOALLOW=false
