switch mail to 163

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ PORT=5000
 ENABLE_CORS=true
 JWTSECRET=huOte.hu>$h23tudeLot89$@$%4_",32
 MONGODB=mongodb://localhost:27001/wlmoniter
-MAIL_HOST=smtp.263xmail.com
+MAIL_HOST=smtp.163.com
 MAIL_PORT=465
-MAIL_USER=quant@kotei-info.com
-MAIL_PASS=kotei$tq88
-MAIL_FROM=WLAdmin <wladmin@kotei-info.com>
+MAIL_USER=fight4fate@163.com
+MAIL_PASS=wsgaeafyoqbbxotz
+MAIL_FROM=WLAdmin <fight4fate@163.com>
 MAIL_SUBJECT=Password Reset
 MAIL_AUTOALLOW=false
