--- a/mongodb.conf
+++ b/mongodb.conf
@@ -1,6 +1,6 @@
-dbpath = d:\mongodb\db
+dbpath = /home/tinder/work/mongodb/db
 
-logpath = d:\mongodb\log\mongodb.log
+logpath = /home/tinder/work/mongodb/log/mongodb.log
 logappend = true
 
 port = 27001
