--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-HOST=127.0.0.1
+HOST=192.168.20.73
 PORT=5000
 SOCKET_PORT=4000
 ENABLE_CORS=true
 JWTSECRET=huOte.hu>$h23tudeLot89$@$%4_",32
 MONGODB=mongodb://localhost:27001/wlmoniter
-MAIL_HOST=smtp.163.com
+MAIL_HOST=smtp.263xmail.com
 MAIL_PORT=465
-MAIL_USER=fight4fate@163.com
-MAIL_PASS=wsgaeafyoqbbxotz
-MAIL_FROM=WLAdmin <fight4fate@163.com>
+MAIL_USER=quant@kotei-info.com
+MAIL_PASS=kotei$tq88
+MAIL_FROM=WLAdmin <wladmin@kotei-info.com>
 MAIL_SUBJECT=Password Reset
 MAIL_AUTOALLOW=false
