--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "underscore": "^1.8.3"
   }
 }
